# MAA_AUTO

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  README.md  README_en.md  SYSTEM_SUMMARY.md  TODO.md  config.example.ini  install.sh  maa-scheduler.service  maa-web-manager.service  maa_auto.py  main.py  manage.sh  manage_web.sh  pyproject.toml  start.sh  start_services.sh  stop_services.sh  task_config.ini  web_manager.py
config/: config.yaml  tasks.yaml
config/systemd/: maa-scheduler.service
scripts/: dev_start.sh  install_service.sh
src/maa_scheduler/: __init__.py  config.py  events.py  executor.py  main.py  metrics.py  notification.py  scheduler.py  web_ui.py
src/maa_scheduler/core/: __init__.py  config.py  config_new.py  executors.py  scheduler.py  scheduler_new.py
src/maa_scheduler/static/css/: main.css
src/maa_scheduler/static/js/: i18n.js
src/maa_scheduler/templates/: 404.html  500.html  base.html  index.html  logs.html  monitor.html  settings.html  tasks.html
src/maa_scheduler/web/: app.py
src/maa_scheduler/web/static/: app.js  style.css
src/maa_scheduler/web/templates/: index.html
templates/: base.html  config.html  index.html  logs.html  tasks.html
