[project]
name = "maa-scheduler"
version = "0.1.0"
description = "MAA 任务自动化调度程序"
authors = [{name = "SnowSwordScholar"}]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
    "apscheduler>=3.10.0",
    "psutil>=5.9.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.8.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "pytest-asyncio>=1.2.0",
]
